# termux-sdl

./: .gitignore  .project  README.md  build.gradle  local.properties
.github/workflows/: android.yml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/SDL2/: CMakeLists.txt
app/src/main/cpp/SDL2/src/core/android/: SDL_android.c  SDL_android.h
app/src/main/cpp/SDL2_gfx/: CMakeLists.txt
app/src/main/cpp/SDL2_image/: CMakeLists.txt
app/src/main/cpp/SDL2_mixer/: CMakeLists.txt
app/src/main/cpp/SDL2_mixer/timidity/: CMakeLists.txt
app/src/main/cpp/SDL2_net/: CMakeLists.txt
app/src/main/cpp/SDL2_ttf/: CMakeLists.txt
app/src/main/cpp/config/: CMakeLists.txt  config.cpp  log.h
app/src/main/cpp/ffplay/: CMakeLists.txt  config.h  ffplay.c
app/src/main/cpp/ffplay/lib/: build.sh  build_ffmpeg.sh
app/src/main/cpp/ffplay/lib/static/: pkg.sh
app/src/main/cpp/main/: CMakeLists.txt
app/src/main/cpp/native_loader/: CMakeLists.txt  native_loader.cpp
app/src/main/java/com/termux/sdl/: JNI.java  TermuxFFplayActivity.java  TermuxNativeActivity.java  TermuxSDLActivity.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/jni/SDL2_ttf/: SDL_ttf.c
examples/: test_log.c
examples/SDL2/draw2/: CMakeLists.txt
examples/SDL2/drawchessboard/: CMakeLists.txt
examples/SDL2/ffplay/: ffplay
examples/SDL2/gfxtest/: CMakeLists.txt  Makefile  gfxtest.c
examples/SDL2/gles2cube/: CMakeLists.txt  gles2cube.c
examples/SDL2/gles2example/: CMakeLists.txt
examples/SDL2/glesexample/: CMakeLists.txt  glesexample.c
examples/SDL2/playmus/: CMakeLists.txt
examples/SDL2/showfont/: CMakeLists.txt
examples/SDL2/showimage/: CMakeLists.txt
examples/SDL2/testgesture/: CMakeLists.txt  testgesture.c
examples/SDL2/testlog/: CMakeLists.txt  test_log.c
examples/native/colors/: CMakeLists.txt
examples/native/cube/: CMakeLists.txt  cube.c
examples/native/plasma/: CMakeLists.txt
examples/native/vulkan/: CMakeLists.txt  main.cpp  vulkan.cpp
gradle/wrapper/: gradle-wrapper.properties
patches/: SDL.h.patch  SDLActivity.java.patch  SDL_android.c.patch  SDL_android.h.patch  SDL_android_log.h.patch  SDL_rwops.c.patch  SDL_ttf.c.patch  SDL_ttf.h.patch  ffplay.c.patch
